Arrays objects added to scripts.js file

--- a/index.html
+++ b/index.html
@@ -35,17 +35,13 @@
 
                 <!-- Questions Heading -->
                 <h1 class="questions-heading">
-                    Questions
+                    Question
                 </h1>    
 
             </section>
 
-            <!-- Options Section -->
-            <section class="options-section"> 
-
-                <input type="button" value="kfskfjskhfjOne">
-                <input type="button" value="Tkjhkjhwo">  
-
+            <!-- Answers Section -->
+            <section class="answers-section">             
             </section>
 
         </section>
