checkAnswer function added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!-- Start Section -->
         <section class="start-section"> 
             
-            <p>kjsfksajfjafadgdgdgdgdgdgk</p>
-            <p>kjsfksajfjafa45454545454k</p>
+            <p>Try to answer de following code-related questions within the time limit.</p>
+            <p>Keep in mind that incorrect answers will penalize your score time by ten seconds</p>
             <input type="button" value="Start" id="start-button">  
 
         </section>
@@ -50,8 +50,7 @@
         <section class="results-section">
 
         </section>
-
-        <div class="timer-count">10</div>
+        <div class="timer-count"></div>
 
     </main>
 
