Functios getQuestion() and  getAnswers() added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Main Header -->
     <header class="scores-header">
         <p class="scores-header-el">View Hihgscores</p>
-        <p class="scores-header-el">Time Left</p>
+        <p class="timer-count"></p>
     </header>
     
     <!-- Main Content -->
@@ -49,8 +49,7 @@
         <!-- Results Section -->
         <section class="results-section">
 
-        </section>
-        <div class="timer-count"></div>
+        </section>        
 
     </main>
 
