--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- Start Section -->
         <section class="start-section"> 
             
+            <h1>Coding Quiz Challenge</h1>
             <p>Try to answer de following code-related questions within the time limit.</p>
             <p>Keep in mind that incorrect answers will penalize your score time by ten seconds</p>
             <input type="button" value="Start" id="start-button">  
