Button with class view-hihgscores created and functionality added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <!-- Main Header -->
     <header class="scores-header">
-        <p class="scores-header-el">View Hihgscores</p>
+        <input class="view-hihgscores" type="button" value="View Hihgscores">
+        <p class="view-hihgscores1">View Hihgscores</p>
         <p class="timer-count"></p>
     </header>
     
