--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- Main Header -->
     <header class="scores-header">
         <input class="view-hihgscores" type="button" value="View Hihgscores">
-        <p class="view-hihgscores1">View Hihgscores</p>
         <p class="timer-count"></p>
     </header>
     
@@ -25,7 +24,7 @@
             <h1>Coding Quiz Challenge</h1>
             <p>Try to answer de following code-related questions within the time limit.</p>
             <p>Keep in mind that incorrect answers will penalize your score time by ten seconds</p>
-            <input type="button" value="Start" id="start-button">  
+            <input class="start-button" type="button" value="Start" id="start-button">  
 
         </section>
 
