--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Code Quiz</title>
+
 </head>
+
+<!-- Main Body -->
 <body>
 
     <!-- Main Header -->
     <header class="scores-header">
+
+        <!-- Button For Showing Higher Scores -->
         <input class="view-hihgscores" type="button" value="View Hihgscores">
         <p class="timer-count"></p>
+
     </header>
     
     <!-- Main Content -->
@@ -22,8 +30,12 @@
         <section class="start-section"> 
             
             <h1>Coding Quiz Challenge</h1>
+
+            <!-- Instructions -->
             <p>Try to answer de following code-related questions within the time limit.</p>
             <p>Keep in mind that incorrect answers will penalize your score time by ten seconds</p>
+
+            <!-- Button For Start Quiz -->
             <input class="start-button" type="button" value="Start" id="start-button">  
 
         </section>
@@ -51,6 +63,9 @@
 
     </main>
 
+    <!-- Main Scripts File -->
     <script src="./assets/js/scripts.js"></script>
+
 </body>
+
 </html>
